--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.1.3"
+    "@google-cloud/functions-framework": "^3.1.3",
+    "axios": "^1.3.3"
   },
   "devDependencies": {
     "typescript": "^4.9.5"
