--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "functions-framework --target=nodejs-http-function",
+    "start": "functions-framework --target=google-cloud-run-function-http",
     "prestart": "npm run build",
     "gcp-build": "npm run build"
   },
@@ -14,10 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.3.0",
-    "axios": "^1.3.3"
+    "@google-cloud/functions-framework": "^3.5.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "^5.9.3"
   }
 }
