--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "dev": "functions-framework --target=google-cloud-run-function-http --port=3000",
     "start": "functions-framework --target=google-cloud-run-function-http",
     "prestart": "npm run build",
     "gcp-build": "npm run build"
